--- a/lab-3/index.html
+++ b/lab-3/index.html
@@ -51,7 +51,7 @@
         </li>
     </ol>
     <hr>
-    <footer class = f>
+    <footer>
         <p>Last updated: 
             <span id="lastModified"></span>
         </p>
