--- a/lab-6/index.html
+++ b/lab-6/index.html
@@ -34,16 +34,16 @@
     <footer>
         <h3>Addendum</h3>
         <p>
-            <strong>Project Overview:</strong> This web page features a temperature converter tool, designed to convert temperatures between Celsius and Fahrenheit. The user can input a temperature value, select the conversion direction, and receive the converted temperature as output.
-        </p>
+            <strong>Project Overview:</strong>Visitors of the site would be able take the BMI Calculator, which helps them figure the levels of BMI by entering weight to height ratio. Users may decide on the number of cm they measure or the number of inches in the case of imperial system. The calculator will display also a BMI number that relates to the users weight status.
+
         <p>
-            <strong>Implementation Details:</strong> The temperature converter is implemented using JavaScript. It involves capturing user input from an HTML form, processing the conversion in JavaScript based on the selected option (Celsius to Fahrenheit or vice versa), and displaying the result on the page.
-        </p>
+            <strong>Implementation Details:</strong>A JavaScript code which handles user input is utilized by BMI calculator. JavaScript will get the users' height and weight upon the submission of the form and make the calculation for BMI via division by height with their square, and then classify the status as someone is underweight or overweight depending on the preset ranges. BMI is calculated and displayed on the homepage showing a person’s weight classification after which In CSS, formatting, and designing of the entire body of a model are done, and in HTML, the form and output parts are created.
+
         <p>
-            <strong>Challenges and Solutions:</strong> A significant challenge was ensuring accurate conversion and handling invalid inputs. This was addressed by implementing input validation and using precise formulas for temperature conversion. Another challenge was creating a responsive and intuitive user interface, which was achieved using CSS Grid layout and modern styling techniques.
-        </p>
+            <strong>Challenges and Solutions:</strong>Accurate conversion and management of incorrect inputs was a big problem. To solve this, exact formulae were used for BMI conversions and input validation was put into place. A responsive and user-friendly user interface was another difficulty, but this was accomplished with the use of contemporary style methods and the CSS Grid layout.
         <p>
-            <strong>Learning Outcomes:</strong> Through this project, I gained a deeper understanding of JavaScript event handling, form input processing, and responsive web design using CSS Grid. It also reinforced the importance of user input validation and clear user feedback in web applications.
+            <strong>Learning Outcomes:</strong>I now have a stronger grasp of form input processing, responsive web design using CSS Grid, and JavaScript event handling thanks to this project. It also reaffirmed how crucial it is for online apps to validate user input and provide unambiguous user feedback.
+
         </p>
 
         <p>Last updated: 
