--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -10,7 +10,7 @@
   <div id="game-container">
     <div id="story">
       <p id="story-text">You find yourself in a realm where reality blends with fantasy. Choose your adventure.</p>
-      <img id="story-image" src="https://static.wikia.nocookie.net/powerlisting/images/c/c6/Fantasy_World.jpeg/revision/latest?cb=20160210204714" alt="Story Image">
+      <img id="story-image" src="https://images.squarespace-cdn.com/content/v1/5eac45f88da144413f9b5763/1658235712240-YPB9XFATMH4VR5I8J5D3/beni-johnson-the-3-spirit-realms-and-the-keys-to-intercession.jpg" alt="Story Image">
     </div>
     <div id="choices"></div>
     <button id="start-button" onclick="startGame()">Restart</button>
